# munim

./: .gitignore  BUILD_SPEC.md  Cargo.toml  LICENSE  README.md  RELEASE.md  package-lock.json  package.json  pricing.toml
.github/workflows/: release.yml
crates/munim-core/: Cargo.toml
crates/munim-core/examples/: scan.rs
crates/munim-core/src/: cache.rs  collector.rs  detail.rs  lib.rs  pricing.rs  settings.rs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/flatpak/: com.munim.app.desktop  com.munim.app.metainfo.xml  com.munim.app.yml  io.github.surdy.munim.desktop  io.github.surdy.munim.metainfo.xml  io.github.surdy.munim.yml
src-tauri/icons/: icon.icns
src-tauri/src/: collector.rs  commands.rs  lib.rs  main.rs  pricing.rs  settings.rs
src/css/: base.css  layout.css  utilities.css
src/css/components/: badges.css  charts.css  data-transfer.css  detail-panel.css  expensive-callout.css  filter-bar.css  footer.css  header.css  heatmap.css  projects-table.css  reload-fab.css  sessions-table.css  settings.css  stat-cards.css  table-rows.css
src/fonts/: fonts.css
src/js/: bootstrap.js  main.js  settings.js
src/js/components/: animations.js  charts.js  data-transfer.js  filters.js  heatmap.js  projections.js  projects-table.js  sessions-table.js
src/js/config/: chart-config.js  constants.js
src/js/utils/: class-utils.js  date-utils.js  formatters.js  model-utils.js  session-detail-loader.js
