[package]
name = "munim-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "munim domain logic: usage collector, pricing, settings (no UI deps)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }
